--- a/contacto.html
+++ b/contacto.html
@@ -48,7 +48,9 @@
   </nav>
 
 <main>
+  <main class="main-contacto">
     <h3>Contacto</h3>
+  </main>
     <div class="cajacontacto">
         <div class="formulario">
             <form action="#" method="post">
