--- a/cocina.html
+++ b/cocina.html
@@ -44,6 +44,7 @@
       <li><a href="cocina.html">Cocina</a></li>
       <li><a href="bano.html">Baño</a></li>
       <li><a href="contacto.html">Contacto</a></li>
+      <li><a href="nosotros.html">Nosotros</a></li>
     </ul>
   </nav>
 
@@ -144,6 +145,8 @@
             <li><a href="cocina.html">Cocina</a></li>
             <li><a href="bano.html">Baño</a></li>
             <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="nosotros.html">Nosotros</a></li>
+
         </ul>
     </div>
     <div class="cajafooter">
