--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <li><a href="cocina.html">Cocina</a></li>
       <li><a href="bano.html">Baño</a></li>
       <li><a href="contacto.html">Contacto</a></li>
+      <li><a href="nosotros.html">Nosotros</a></li>
     </ul>
   </nav>
 
@@ -169,6 +170,7 @@
             <li><a href="cocina.html">Cocina</a></li>
             <li><a href="bano.html">Baño</a></li>
             <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="nosotros.html">Nosotros</a></li>
         </ul>
     </div>
     <div class="cajafooter">
