--- a/nosotros.html
+++ b/nosotros.html
@@ -113,3 +113,14 @@
       
     </div>
 </footer>
+<script>
+  function MiFuncion() {
+    // aquí se define el ID del elemento que va a tomar la clase
+    var x = document.getElementById("navegador");
+      x.classList.toggle("mostrarmenu");
+      }
+   
+</script> 
+  
+</body>
+</html>
